@@ -7,7 +7,6 @@
 </head>
 
 <body>
-<div id="messsage"></div>
 <div>Classes
   <dl>
     <dt><label for="element-class">Resulted elements</label></dt>
@@ -25,5 +24,7 @@
     <dt><label for="style">Style</label></dt>
     <dd><textarea id="style"></textarea></dd>
 </div>
+<div><button id="save">Save</button></div>
+<div id="message"></div>
 </body>
 </html>
